--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
        <link rel="stylesheet" href="./css/styles.css">
        </head>
      <body>
-      <header>
-        <nav>
+      <header class="head">
+        <div class="div-container">
+        <nav class="nav">
           <a class="logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
-          <ul>
+          <ul style="display: flex;">
             <li><a class="nav-link" href="./index.html">Studio</a></li>
             <li><a class="nav-link" href="">Portfolio</a></li>
             <li><a class="nav-link" href="">Contacts</a></li>
@@ -30,6 +31,7 @@
             <li><a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
           </ul>
         </address>
+        </div>
           </header>
           <main>
             <section class="start">
