--- a/index.html
+++ b/index.html
@@ -35,13 +35,16 @@
           </header>
           <main>
             <section class="start">
+              <div class="div-container">
           <h1 class="solutions"> Effective Solutions for Your Business</h1>
           <button type="button" class="cursor-pointer">Order Service</button>
-           </section>
+          </div>
+          </section>
            <section>
+          <div class="div-container">
             <h2>Solutions</h2>
-        <ul>
-         <li>
+           <ul>
+            <li>
         <h3 class="title">Strategy</h3>
         <p class="middle">Our goal is to identify the business problem to walk away with the perfect and creative solution.
         </p>
@@ -59,8 +62,10 @@
          <p class="middle">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
           </li>
          </ul>
+        </div>
         </section>
         <section class="team">
+         <div class="div-container">
          <h2 class="teamul">Our Team</h2>
          <ul>
           <li class="bak"><img src="./images/img1.jpg" width="264" alt="men 1"> 
@@ -76,8 +81,10 @@
           <h3 class="title">Daniel Wilson</h3> 
           <p class="team-p">UI Designer</p> </li>
        </ul>
+       </div>
         </section>
           <section class="portfolio">
+            <div class="div-container">
         <h2 class="teamul">Our Portfolio</h2>
         <ul>
           <li><img src="./images/img5.jpg" width="360" alt="men 1">
@@ -105,11 +112,14 @@
             <p class="team-p">Marketing</p>
           </li>
         </ul>
+        </div>
         </section>
        </main>
        <footer class="footer">
+        <div class="div-container">
         <a class="logo-footer" href="./index.html">Web<span class="logo-partt">Studio</span></a>
         <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-     </footer>
+        </div>
+      </footer>
      </body>
      </html>
