--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
           <button type="button" class="cursor-pointer">Order Service</button>
           </div>
           </section>
-           <section>
+           <section class="second">
           <div class="div-container">
-            <h2>Solutions</h2>
+            <h2 class="you">Solutions</h2>
            <ul>
             <li>
         <h3 class="title">Strategy</h3>
