--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
            <section class="second">
           <div class="div-container">
             <h2 class="you">Solutions</h2>
-           <ul>
+           <ul class="center">
             <li>
         <h3 class="title">Strategy</h3>
         <p class="middle">Our goal is to identify the business problem to walk away with the perfect and creative solution.
@@ -67,7 +67,7 @@
         <section class="team">
          <div class="div-container">
          <h2 class="teamul">Our Team</h2>
-         <ul>
+         <ul class="center">
           <li class="bak"><img src="./images/img1.jpg" width="264" alt="men 1"> 
           <h3 class="title">Mark Guerrero</h3> 
           <p class="team-p">Product Designer</p> </li>
@@ -86,7 +86,7 @@
           <section class="portfolio">
             <div class="div-container">
         <h2 class="teamul">Our Portfolio</h2>
-        <ul>
+        <ul class="center">
           <li><img src="./images/img5.jpg" width="360" alt="men 1">
             <h3 class="name">Banking App</h3>
             <p class="team-p">App</p>
