--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
        </head>
      <body>
       <header class="head">
-        <div class="div-container">
+        <div class="container header-container">
         <nav class="nav">
           <a class="logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
-          <ul style="display: flex;">
+          <ul class="navv">
             <li><a class="nav-link" href="./index.html">Studio</a></li>
             <li><a class="nav-link" href="">Portfolio</a></li>
             <li><a class="nav-link" href="">Contacts</a></li>
           </ul>
         </nav>
         <address class="address">
-          <ul>
+          <ul class="address ul">
             <li><a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
           </ul>
@@ -35,13 +35,13 @@
           </header>
           <main>
             <section class="start">
-              <div class="div-container">
+              <div class="container">
           <h1 class="solutions"> Effective Solutions for Your Business</h1>
           <button type="button" class="cursor-pointer">Order Service</button>
           </div>
           </section>
            <section class="second">
-          <div class="div-container">
+          <div class="container">
             <h2 class="you">Solutions</h2>
            <ul class="center">
             <li>
@@ -65,7 +65,7 @@
         </div>
         </section>
         <section class="team">
-         <div class="div-container">
+         <div class="container">
          <h2 class="teamul">Our Team</h2>
          <ul class="center">
           <li class="bak"><img src="./images/img1.jpg" width="264" alt="men 1"> 
@@ -84,7 +84,7 @@
        </div>
         </section>
           <section class="portfolio">
-            <div class="div-container">
+            <div class="container">
         <h2 class="teamul">Our Portfolio</h2>
         <ul class="center">
           <li><img src="./images/img5.jpg" width="360" alt="men 1">
@@ -116,7 +116,7 @@
         </section>
        </main>
        <footer class="footer">
-        <div class="div-container">
+        <div class="container">
         <a class="logo-footer" href="./index.html">Web<span class="logo-partt">Studio</span></a>
         <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
