--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <ul class="navv">
             <li><a class="nav-link" href="./index.html">Studio</a></li>
             <li><a class="nav-link" href="">Portfolio</a></li>
-            <li><a class="nav-link" href="">Contacts</a></li>
+            <li><a class="nav-linkk" href="">Contacts</a></li>
           </ul>
         </nav>
         <address class="address">
