--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
           </section>
            <section class="second">
           <div class="container">
+            <div class="visually-hidden">
             <h2 class="you">Solutions</h2>
+            </div>
            <ul class="center">
             <li>
         <h3 class="title">Strategy</h3>
