--- a/index.html
+++ b/index.html
@@ -34,13 +34,14 @@
         </div>
           </header>
           <main>
-            <section class="start">
+             <section class="start">
               <div class="container">
-          <h1 class="solutions"> Effective Solutions for Your Business</h1>
+            <h1 class="solutions"> Effective Solutions for Your Business</h1>
           <button type="button" class="cursor-pointer">Order Service</button>
-          </section>
+          </div>
+           </section>
            <section class="second">
-          <div class="container">
+           <div class="container">
             <div class="visually-hidden">
             <h2 class="you">Solutions</h2>
            <ul class="center">
@@ -65,7 +66,7 @@
         </div>
         </section>
         <section class="team">
-         
+        <div class="container">
          <h2 class="teamul">Our Team</h2>
          <ul class="center">
           <li class="bak"><img src="./images/img1.jpg" width="264" alt="men 1"> 
@@ -80,11 +81,11 @@
           <li class="bak"><img src="./images/img4.jpg" width="264" alt="women"> 
           <h3 class="title">Daniel Wilson</h3> 
           <p class="team-p">UI Designer</p> </li>
-       </ul>
-   
+         </ul>
+         </div>
         </section>
           <section class="portfolio">
-           
+          <div class="container">
         <h2 class="teamul">Our Portfolio</h2>
         <ul class="center">
           <li><img src="./images/img5.jpg" width="360" alt="men 1">
