--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </ul>
         </nav>
         <address class="address">
-          <ul>
+          <ul class="address ul">
             <li><a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
           </ul>
@@ -34,16 +34,16 @@
         </div>
           </header>
           <main>
-             <section class="start">
+          <section class="start">
               <div class="container">
-            <h1 class="solutions"> Effective Solutions for Your Business</h1>
-          <button type="button" class="cursor-pointer">Order Service</button>
+           <h1 class="solutions"> Effective Solutions for Your Business</h1>
+           <button type="button" class="cursor-pointer">Order Service</button>
           </div>
-           </section>
+          </section>
            <section class="second">
            <div class="container">
-            <div class="visually-hidden">
-            <h2 class="you">Solutions</h2>
+            <div class="visually-hidden"> </div>
+            <h2 class="you">Solutions</h2> 
            <ul class="center">
             <li>
         <h3 class="title">Strategy</h3>
