--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </ul>
         </nav>
         <address class="address">
-          <ul class="address ul">
+          <ul>
             <li><a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
           </ul>
@@ -42,23 +42,23 @@
           </section>
            <section class="second">
            <div class="container">
-            <div class="visually-hidden"> </div>
-            <h2 class="you">Solutions</h2> 
+            <div class="visually-hidden"> 
+            <h2 class="you">Solutions</h2> </div>
            <ul class="center">
-            <li>
+            <li class="li">
         <h3 class="title">Strategy</h3>
         <p class="middle">Our goal is to identify the business problem to walk away with the perfect and creative solution.
         </p>
         </li>
-        <li>
+        <li class="li">
         <h3 class="title">Punctuality</h3>
         <p class="middle">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
         </li>
-        <li>
+        <li class="li">
         <h3 class="title">Diligence</h3>
          <p class="middle">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
         </li>
-        <li>
+        <li class="li">
         <h3 class="title">Technologies</h3>
          <p class="middle">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
           </li>
@@ -69,6 +69,7 @@
         <div class="container">
          <h2 class="teamul">Our Team</h2>
          <ul class="center">
+          <div class="container plus">
           <li class="bak"><img src="./images/img1.jpg" width="264" alt="men 1"> 
           <h3 class="title">Mark Guerrero</h3> 
           <p class="team-p">Product Designer</p> </li>
@@ -81,6 +82,7 @@
           <li class="bak"><img src="./images/img4.jpg" width="264" alt="women"> 
           <h3 class="title">Daniel Wilson</h3> 
           <p class="team-p">UI Designer</p> </li>
+          </div>
          </ul>
          </div>
         </section>
