--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <div class="container header-container">
         <nav class="nav">
           <a class="logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
-          <ul class="navv">
+          <ul class="my-menu">
             <li><a class="nav-link" href="./index.html">Studio</a></li>
             <li><a class="nav-link" href="">Portfolio</a></li>
-            <li><a class="nav-linkk" href="">Contacts</a></li>
+            <li><a class="nav-link" href="">Contacts</a></li>
           </ul>
         </nav>
         <address class="address">
@@ -69,7 +69,6 @@
         <div class="container">
          <h2 class="teamul">Our Team</h2>
          <ul class="center">
-          <div class="container plus">
           <li class="bak"><img src="./images/img1.jpg" width="264" alt="men 1"> 
           <h3 class="title">Mark Guerrero</h3> 
           <p class="team-p">Product Designer</p> </li>
@@ -82,12 +81,11 @@
           <li class="bak"><img src="./images/img4.jpg" width="264" alt="women"> 
           <h3 class="title">Daniel Wilson</h3> 
           <p class="team-p">UI Designer</p> </li>
-          </div>
          </ul>
          </div>
         </section>
           <section class="portfolio">
-          <div class="container">
+            <div class="container">
         <h2 class="teamul">Our Portfolio</h2>
         <ul class="center">
           <li><img src="./images/img5.jpg" width="360" alt="men 1">
