--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
           </section>
            <section class="second">
            <div class="container">
-            <div class="visually-hidden"> 
+            <div class=".visually-hidden"> 
             <h2 class="you">Solutions</h2> </div>
            <ul class="center">
-            <li class="li">
+            <li class="lii">
         <h3 class="title">Strategy</h3>
         <p class="middle">Our goal is to identify the business problem to walk away with the perfect and creative solution.
         </p>
@@ -70,17 +70,22 @@
          <h2 class="teamul">Our Team</h2>
          <ul class="center">
           <li class="bak"><img src="./images/img1.jpg" width="264" alt="men 1"> 
+          
+          <div class="employee-info">
           <h3 class="title">Mark Guerrero</h3> 
-          <p class="team-p">Product Designer</p> </li>
+          <p class="team-p">Product Designer</p> </div> </li>
           <li class="bak"><img src="./images/img2.jpg" width="264" alt="men 2"> 
+          <div class="employee-info">
           <h3 class="title">Tom Ford</h3> 
-          <p class="team-p">Frontend Developer</p> </li>
+          <p class="team-p">Frontend Developer</p> </div> </li>
           <li class="bak"><img src="./images/img3.jpg" width="264" alt="men 3"> 
+          <div class="employee-info">
           <h3 class="title">Camila Garcia</h3> 
-          <p class="team-p">Marketing</p> </li>
+          <p class="team-p">Marketing</p> </div> </li> 
           <li class="bak"><img src="./images/img4.jpg" width="264" alt="women"> 
+          <div class="employee-info">
           <h3 class="title">Daniel Wilson</h3> 
-          <p class="team-p">UI Designer</p> </li>
+          <p class="team-p">UI Designer</p> </div> </li> 
          </ul>
          </div>
         </section>
