--- a/index.html
+++ b/index.html
@@ -42,23 +42,22 @@
           </section>
            <section class="second">
            <div class="container">
-            <div class=".visually-hidden"> 
-            <h2 class="you">Solutions</h2> </div>
+           <h2 class="you">Solutions</h2>
            <ul class="center">
             <li class="lii">
         <h3 class="title">Strategy</h3>
         <p class="middle">Our goal is to identify the business problem to walk away with the perfect and creative solution.
         </p>
         </li>
-        <li class="li">
+        <li class="lii">
         <h3 class="title">Punctuality</h3>
         <p class="middle">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
         </li>
-        <li class="li">
+        <li class="lii">
         <h3 class="title">Diligence</h3>
          <p class="middle">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
         </li>
-        <li class="li">
+        <li class="lii">
         <h3 class="title">Technologies</h3>
          <p class="middle">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
           </li>
