--- a/index.html
+++ b/index.html
@@ -92,29 +92,35 @@
             <div class="container">
         <h2 class="teamul">Our Portfolio</h2>
         <ul class="center">
-          <li><img src="./images/img5.jpg" width="360" alt="men 1">
+          <li class="forty"><img src="./images/img5.jpg" width="360" alt="men 1">
+            <div class="app-info">
             <h3 class="name">Banking App</h3>
-            <p class="team-p">App</p>
+            <p class="team-p">App</p></div>
           </li>
-          <li><img src="./images/img6.jpg" width="360" alt="men 2">
+          <li class="forty"><img src="./images/img6.jpg" width="360" alt="men 2">
+            <div class="app-info">
             <h3 class="name">Cashless Payment</h3>
-            <p class="team-p">Marketing</p>
+            <p class="team-p">Marketing</p></div>
           </li>
-          <li><img src="./images/img7.jpg" width="360" alt="men 3">
+            <li class="forty"><img src="./images/img7.jpg" width="360" alt="men 3">
+            <div class="app-info">
             <h3 class="name">Meditation App</h3>
-            <p class="team-p">App</p>
+            <p class="team-p">App</p></div>
           </li>
-          <li><img src="./images/img8.jpg" width="360" alt="women">
+          <li class="forty"><img src="./images/img8.jpg" width="360" alt="women">
+            <div class="app-info">
             <h3 class="name">Taxi Service</h3>
-            <p class="team-p">Marketing</p>
+            <p class="team-p">Marketing</p></div>
           </li>
-          <li><img src="./images/img9.jpg" width="360" alt="women">
+           <li class="forty"><img src="./images/img9.jpg" width="360" alt="women">
+            <div class="app-info">
             <h3 class="name">Screen Illustrations</h3>
-            <p class="team-p">Design</p>
+            <p class="team-p">Design</p></div>
           </li>
-          <li><img src="./images/img10.jpg" width="360" alt="women">
+          <li class="forty"><img src="./images/img10.jpg" width="360" alt="women">
+          <div class="app-info">
             <h3 class="name">Online Courses</h3>
-            <p class="team-p">Marketing</p>
+            <p class="team-p">Marketing</p></div>
           </li>
         </ul>
         </div>
