--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
            <h2 class="you">Solutions</h2>
            <ul class="center">
             <li class="lii">
-        <h3 class="title">Strategy</h3>
+        <h3>Strategy</h3>
         <p class="middle">Our goal is to identify the business problem to walk away with the perfect and creative solution.
         </p>
         </li>
@@ -70,19 +70,19 @@
          <ul class="center">
           <li class="bak"><img src="./images/img1.jpg" width="264" alt="men 1"> 
           <div class="employee-info">
-          <h3 class="title">Mark Guerrero</h3> 
+          <h3 class="titlee">Mark Guerrero</h3> 
           <p class="team-p">Product Designer</p> </div> </li>
           <li class="bak"><img src="./images/img2.jpg" width="264" alt="men 2"> 
           <div class="employee-info">
-          <h3 class="title">Tom Ford</h3> 
+          <h3 class="titlee">Tom Ford</h3> 
           <p class="team-p">Frontend Developer</p> </div> </li>
           <li class="bak"><img src="./images/img3.jpg" width="264" alt="men 3"> 
           <div class="employee-info">
-          <h3 class="title">Camila Garcia</h3> 
+          <h3 class="titlee">Camila Garcia</h3> 
           <p class="team-p">Marketing</p> </div> </li> 
           <li class="bak"><img src="./images/img4.jpg" width="264" alt="women"> 
           <div class="employee-info">
-          <h3 class="title">Daniel Wilson</h3> 
+          <h3 class="titlee">Daniel Wilson</h3> 
           <p class="team-p">UI Designer</p> </div> </li> 
          </ul>
          </div>
@@ -90,7 +90,7 @@
           <section class="portfolio">
             <div class="container">
         <h2 class="teamul">Our Portfolio</h2>
-        <ul class="center">
+        <ul class="centerr">
           <li class="forty"><img src="./images/img5.jpg" width="360" alt="men 1">
             <div class="app-info">
             <h3 class="name">Banking App</h3>
