--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
           </section>
            <section class="second">
            <div class="container">
-           <h2 class="you">Solutions</h2>
+           <h2 class="visually-hidden">Solutions</h2>
            <ul class="center">
             <li class="lii">
-        <h3>Strategy</h3>
+        <h3 class="title">Strategy</h3>
         <p class="middle">Our goal is to identify the business problem to walk away with the perfect and creative solution.
         </p>
         </li>
