--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <section class="portfolio">
             <div class="container">
         <h2 class="teamul">Our Portfolio</h2>
-        <ul class="centerr">
+        <ul class="center">
           <li class="forty"><img src="./images/img5.jpg" width="360" alt="men 1">
             <div class="app-info">
             <h3 class="name">Banking App</h3>
