--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <section class="team">
         <div class="container">
          <h2 class="teamul">Our Team</h2>
-         <ul class="center">
+         <ul class="centerr">
           <li class="bak"><img src="./images/img1.jpg" width="264" alt="men 1"> 
           <div class="employee-info">
           <h3 class="titlee">Mark Guerrero</h3> 
