--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
            <section class="second">
            <div class="container">
            <h2 class="you">Solutions</h2>
-           <ul class="center">
+           <ul class="centero">
             <li class="lii">
         <h3 class="title">Strategy</h3>
         <p class="middle">Our goal is to identify the business problem to walk away with the perfect and creative solution.
@@ -94,32 +94,32 @@
           <li class="forty"><img src="./images/img5.jpg" width="360" alt="men 1">
             <div class="app-info">
             <h3 class="name">Banking App</h3>
-            <p class="team-p">App</p></div>
+            <p class="team-pp">App</p></div>
           </li>
           <li class="forty"><img src="./images/img6.jpg" width="360" alt="men 2">
             <div class="app-info">
             <h3 class="name">Cashless Payment</h3>
-            <p class="team-p">Marketing</p></div>
+            <p class="team-pp">Marketing</p></div>
           </li>
             <li class="forty"><img src="./images/img7.jpg" width="360" alt="men 3">
             <div class="app-info">
             <h3 class="name">Meditation App</h3>
-            <p class="team-p">App</p></div>
+            <p class="team-pp">App</p></div>
           </li>
           <li class="forty"><img src="./images/img8.jpg" width="360" alt="women">
             <div class="app-info">
             <h3 class="name">Taxi Service</h3>
-            <p class="team-p">Marketing</p></div>
+            <p class="team-pp">Marketing</p></div>
           </li>
            <li class="forty"><img src="./images/img9.jpg" width="360" alt="women">
             <div class="app-info">
             <h3 class="name">Screen Illustrations</h3>
-            <p class="team-p">Design</p></div>
+            <p class="team-pp">Design</p></div>
           </li>
           <li class="forty"><img src="./images/img10.jpg" width="360" alt="women">
           <div class="app-info">
             <h3 class="name">Online Courses</h3>
-            <p class="team-p">Marketing</p></div>
+            <p class="team-pp">Marketing</p></div>
           </li>
         </ul>
         </div>
