--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </section>
            <section class="second">
            <div class="container">
-           <h2 class="you">Solutions</h2>
+           <h2 class="visually-hidden">Solutions</h2>
            <ul class="centero">
             <li class="lii">
         <h3 class="title">Strategy</h3>
